Ore Generation + Meta Blocks

--- a/src/main/resources/assets/morbus/lang/en_us.lang
+++ b/src/main/resources/assets/morbus/lang/en_us.lang
@@ -6,4 +6,8 @@ item.morbus_angel_gem.name=Angel Gem
 tile.morbus_dirt_block.name=Morbus Dirt
 tile.morbus_brick_block.name=Morbus Bricks Block
 tile.morbus_bedrock_block.name=Morbus Bedrock
-tile.morbus_ore_block.name=Morbus Ore
+
+//Ores
+tile.ore_overworld_morbus.name=Morbus Ore
+tile.ore_overworld_miron.name=Morbus Iron Ore
+tile.ore_overworld_mgold.name=Morbus Gold Ore
