--- a/src/main/resources/assets/morbus/lang/en_us.lang
+++ b/src/main/resources/assets/morbus/lang/en_us.lang
@@ -1,5 +1,6 @@
 //Items
 item.morbus_brick.name=Morbus Brick
+item.morbus_cauldron.name=Morbus Cauldron
 item.morbus_angel_gem.name=Angel Gem
 
 //Blocks
